style: fix content overflow in mobile fish-details view not showing all content

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -164,8 +164,10 @@ button:hover {
     align-items: center;
     width: 100%;
     height: auto;
+    overflow: visible;
   }
   .fish-details-container img {
+    box-sizing: border-box;
     width: 100%;
     border-radius: 0;
   }
@@ -189,6 +191,6 @@ button:hover {
     padding: 10px 0;
   }
   .fish-details-container .buttons-container .go-btn {
-    width: 300px;
+    width: 200px;
   }
 }
